--- a/.gitignore
+++ b/.gitignore
@@ -20,11 +20,14 @@ crawled*/
 domain_content*/
 llm_extracted_*/
 test_crawled*/
-archive/
+archive/*
 archive_*/
 pluralized*/
 sachanlagen*/
+logfiles/
+output*/
 
+*.csv
 *.log
 
 .gitignore
