--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,167 @@
-bcc==0.18.0
-blinker==1.4
-Brlapi==0.8.3
-certifi==2020.6.20
-chardet==4.0.0
-chrome-gnome-shell==0.0.0
-click==8.0.3
-colorama==0.4.4
-command-not-found==0.3
-cryptography==3.4.8
-cupshelpers==1.0
-dbus-python==1.2.18
-defer==1.0.6
-distro==1.7.0
-evdev==1.4.0
-hidpidaemon==18.4.6
-httplib2==0.20.2
-idna==3.3
-importlib-metadata==4.6.4
-jeepney==0.7.1
-kernelstub==3.1.4
-keyring==23.5.0
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-louis==3.20.0
-macaroonbakery==1.3.1
-more-itertools==8.10.0
-netaddr==0.8.0
-netifaces==0.11.0
-oauthlib==3.2.0
-pop-transition==1.1.2
-protobuf==3.12.4
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-pycairo==1.20.1
-pycups==2.0.1
-pydbus==0.6.0
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-python-apt==2.4.0+ubuntu4
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+aiosqlite==0.21.0
+annotated-types==0.7.0
+anyio==4.9.0
+asttokens==3.0.0
+async-timeout==5.0.1
+attrs==25.3.0
+awscli==1.40.3
+backcall==0.2.0
+beautifulsoup4==4.13.4
+bleach==6.2.0
+boto3==1.38.4
+botocore==1.38.4
+Brotli==1.1.0
+certifi==2025.4.26
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+coloredlogs==15.0.1
+Crawl4AI==0.5.0.post8
+cryptography==44.0.2
+cssselect==1.3.0
+dateparser==1.2.1
+de-autobahn==1.0.4
+de-bundesrat==0.1.0
+de-bundestag==0.1.0
+de-dwd==1.0.1
+de-interpol==0.1.0
+de-jobsuche==0.1.0
+de-ladestationen==1.0.5
+de-mudab==0.1.0
+de-nina==1.1.0
+de-polizei-brandenburg==0.1.0
+de-risikogebiete==0.1.0
+de-smard==0.1.0
+de-strahlenschutz==1.0.0
+de-travelwarning==0.1.0
+de-zoll==0.1.0
+decorator==5.2.1
+defusedxml==0.7.1
+deutschland==0.4.2
+distro==1.9.0
+docopt==0.6.2
+docutils==0.19
+et_xmlfile==2.0.0
+exceptiongroup==1.2.2
+executing==2.2.0
+fake-http-header==0.3.5
+fake-useragent==2.2.0
+fastjsonschema==2.21.1
+faust-cchardet==2.1.19
+filelock==3.18.0
+flatbuffers==25.2.10
+frozenlist==1.6.0
+fsspec==2025.3.2
+future==1.0.0
+fuzzywuzzy==0.18.0
+greenlet==3.2.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.30.2
+humanfriendly==10.0
+humanize==4.12.2
+idna==3.10
+importlib_metadata==8.7.0
+ipython==8.12.3
+jedi==0.19.2
+Jinja2==3.1.6
+jiter==0.9.0
+jmespath==1.0.1
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+Levenshtein==0.27.1
+litellm==1.67.4.post1
+lxml==5.4.0
+mapbox-vector-tile==2.1.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.1.3
+more-itertools==8.14.0
+mpmath==1.3.0
+multidict==6.4.3
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nltk==3.9.1
+numpy==2.2.5
+onnxruntime==1.21.1
+openai==1.76.0
+openpyxl==3.1.5
+packaging==25.0
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.4.0
+pipreqs==0.5.0
+platformdirs==4.3.7
+playwright==1.51.0
+prompt_toolkit==3.0.51
+propcache==0.3.1
+protobuf==5.29.4
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyasn1==0.6.1
+pyclipper==1.3.0.post6
+pycparser==2.22
+pydantic==2.11.3
+pydantic_core==2.33.1
+pyee==12.1.1
+Pygments==2.19.1
+pyOpenSSL==25.0.0
+pyperclip==1.9.0
 python-dateutil==2.9.0.post0
-python-debian==0.1.43+ubuntu1.1
-python-gnupg==0.4.8
-python-ldap==3.2.0
-python-magic==0.4.27
-python-xlib==0.29
-pytz==2022.1
-pyxdg==0.27
-PyYAML==5.4.1
-repolib==2.2.1
-repoman==1.4.0
-requests==2.25.1
-s3cmd==2.4.0
-screen-resolution-extra==0.0.0
-SecretStorage==3.3.1
-sessioninstaller==0.0.0
-six==1.16.0
-ssh-import-id==5.11
-system76driver==22.4.1
-systemd-python==234
+python-dotenv==1.1.0
+python-Levenshtein==0.27.1
+pytz==2025.2
+PyYAML==6.0.2
+pyzmq==26.4.0
+rank-bm25==0.2.2
+RapidFuzz==3.13.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+rich==14.0.0
+rpds-py==0.24.0
+rsa==4.7.2
+s3transfer==0.12.0
+shapely==2.1.0
+six==1.17.0
+sniffio==1.3.1
+snowballstemmer==2.2.0
+soupsieve==2.7
+stack-data==0.6.3
+sympy==1.14.0
+tf-playwright-stealth==1.1.2
+tiktoken==0.9.0
+tinycss2==1.4.0
+tokenizers==0.21.1
+tornado==6.4.2
 tqdm==4.67.1
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-urllib3==1.26.5
-wadllib==1.3.6
-xdg==5
-xkit==0.0.0
-zipp==1.0.0
+traitlets==5.14.3
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.4.0
+wcwidth==0.2.13
+webencodings==0.5.1
+xxhash==3.5.0
+yarg==0.1.9
+yarl==1.20.0
+zipp==3.21.0
