refactor: clean up unused imports and comments in master_pipeline.py

--- a/.gitignore
+++ b/.gitignore
@@ -49,8 +49,30 @@ sachanlagen*
 
 makefile
 *.toml
-<<<<<<< HEAD
 uv.lock
-=======
 *.lock
->>>>>>> 8fa08c3 (add .venv and misc files)
+.cursor/
+
+# Added by Claude Task Master
+# Logs
+logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dev-debug.log
+# Dependency directories
+node_modules/
+# Environment variables
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+.DS_Store
+# Task files
+tasks.json
+tasks/ 
