--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
 aiosignal==1.3.2
 aiosqlite==0.21.0
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
 asttokens==3.0.0
@@ -12,9 +13,11 @@ awscli==1.40.3
 backcall==0.2.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
+blinker==1.9.0
 boto3==1.38.4
 botocore==1.38.4
 Brotli==1.1.0
+cachetools==5.5.2
 certifi==2025.4.26
 cffi==1.17.1
 chardet==5.2.0
@@ -60,6 +63,8 @@ frozenlist==1.6.0
 fsspec==2025.3.2
 future==1.0.0
 fuzzywuzzy==0.18.0
+gitdb==4.0.12
+GitPython==3.1.44
 greenlet==3.2.1
 h11==0.16.0
 httpcore==1.0.9
@@ -92,6 +97,7 @@ mistune==3.1.3
 more-itertools==8.14.0
 mpmath==1.3.0
 multidict==6.4.3
+narwhals==1.37.1
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -100,7 +106,7 @@ numpy==2.2.5
 onnxruntime==1.21.1
 openai==1.76.0
 openpyxl==3.1.5
-packaging==25.0
+packaging==24.2
 pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
@@ -116,11 +122,13 @@ protobuf==5.29.4
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==20.0.0
 pyasn1==0.6.1
 pyclipper==1.3.0.post6
 pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
+pydeck==0.9.1
 pyee==12.1.1
 Pygments==2.19.1
 pyOpenSSL==25.0.0
@@ -142,15 +150,19 @@ rsa==4.7.2
 s3transfer==0.12.0
 shapely==2.1.0
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 snowballstemmer==2.2.0
 soupsieve==2.7
 stack-data==0.6.3
+streamlit==1.45.0
 sympy==1.14.0
+tenacity==9.1.2
 tf-playwright-stealth==1.1.2
 tiktoken==0.9.0
 tinycss2==1.4.0
 tokenizers==0.21.1
+toml==0.10.2
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
@@ -159,6 +171,7 @@ typing_extensions==4.13.2
 tzdata==2025.2
 tzlocal==5.3.1
 urllib3==2.4.0
+watchdog==6.0.0
 wcwidth==0.2.13
 webencodings==0.5.1
 xxhash==3.5.0
